# zp_simulation

./: .gitignore  AGENTS.md  README.md  README_REFACTORED.md  main.py  pyproject.toml
logs/blastocyst_multiclass_efficientnet-b4_20250912_204733/: events.out.tfevents.1757699253.Panteleimons-MacBook-Air.local.8024.0
logs/blastocyst_multiclass_efficientnet-b4_20250912_204937/: events.out.tfevents.1757699377.Panteleimons-MacBook-Air.local.8555.0
src/: complete_pronuclei_train.py  config.py  inference_blastocyst.py  pronuclei_inference.py  pronuclei_inference_parallel.py  test_mps_device.py  test_pipeline.py  train_blastocyst.py  visual_inference.py
src/inference/: __main__.py
src/notebooks_irrelevant/: balloon.py  create_whole_embryo_masks.ipynb  dp_ci  extract_masks.ipynb  find_large_blastocysts.ipynb  init_notebook pronuclei.ipynb  init_notebook.ipynb  internal_pressure_sampling  mooeny_rivlin.py  ogden_model.py  pymc_experiments.ipynb  tst.ipynb  zp_segmentation.ipynb
src/notebooks_pn/: all_slides_actual_new_data.txt  euploid_research.ipynb  euploid_research_what.ipynb  fitting_circles_exploration.ipynb  fitting_circles_exploration_1.ipynb  full_pn1_df.parquet  full_pn2_df.parquet  init_notebook_pn_seg.ipynb  rd_slides_new_data.txt  targets.csv
src/segmentation_utils/: dataloader.py  device_utils.py  extract_both_masks.py  extract_frames_from_sqlite.py  generalized_dataset.py  generalized_train.py  pn_circle_fit.py  train_unet.py
